--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -16,7 +16,7 @@
           <small>but you weren't sure if it was worth it?</small>
         </h1> <br>
         <p class="lead">As a musician I get this a lot. People want me to play for them, I want to play for them but neither of us
-          wants to pay the cost of the show up front. Hoping to recoup costs ('build it and they will come') is a great way to extinguish hope while paying for promotion is expensive with no guaranteed return. Try 100 Motels instead.  </p>
+          wants to pay the cost of the show up front. Hoping to recoup costs ('build it and they will come') is worrisome  while paying for promotion is expensive with no guaranteed return. 100 Motels is a better option I think. Go ahead, try it out.  </p>
         <%= link_to "New Event", events_path, method: :post, class: 'btn btn-large btn-success' %>
       </div>
 
