--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,20 +34,20 @@
               <!-- <li><%#= render 'events/search' %></li> -->
             </ul>
             <ul class="nav pull-right topbar">
-              <% unless user_signed_in? %>
-                <li><%= link_to "Sign up", new_user_registration_path %></li>
-                <li><%= link_to "Sign in", new_user_session_path %></li>
+              <% unless current_user %>
+                <li><%= link_to "Sign up", signup_path %></li>
+                <li><%= link_to "Sign in", login_path %></li>
               <% end %>
               <li class="divider-vertical"></li>
-              <% if user_signed_in? %>
+              <% if current_user %>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <i class="icon-user"></i></b></a>
                   <ul class="dropdown-menu">
-                    <li><%= link_to "User Account", current_user %></li>
+                    <li><%= link_to "User Account", user_path(current_user) %></li>
                     <li> <%= link_to "Your Events", organizer_events_path %>  </li>
                     <li> <%#= link_to "Tickets", organizer_tickets_path %>  </li>
                     <li class="divider"></li>
-                    <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
+                    <li><%= link_to "Sign out", logout_path %></li>
                   </ul>
                 </li>
               <% end %>
