--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,7 +10,7 @@
 						An email has been sent to <%= @order.email %> with your ticket. </p>
 					</p>
 				</header>
-				<% unless user_signed_in? %>
+				<% unless current_user %>
 						<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: ""}) do |f| %>
 						  <%= f.error_notification %>
 						  	<%= f.input :guest_id, as: :hidden, input_html: { value: @guest.id } %>
