--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,7 @@
         <ul class="nav nav-pills pull-right">
           <li><%= link_to "Search Events", events_path %></li>
           <li><%= link_to "Help & Information", info_path %></li>
-          <li><%= link_to "Sign In" %></li>
+          <li><%= link_to "Sign In", login_path %></li>
         </ul>
         <h3 class="muted">100 Motels</h3>
       </div>
