--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,11 +41,10 @@
               <li class="divider-vertical"></li>
               <% if current_user %>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <i class="icon-user"></i></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.your_account_or_email %> <i class="icon-user"></i></b></a>
                   <ul class="dropdown-menu">
                     <li><%= link_to "User Account", user_path(current_user) %></li>
                     <li> <%= link_to "Your Events", organizer_events_path %>  </li>
-                    <li> <%#= link_to "Tickets", organizer_tickets_path %>  </li>
                     <li class="divider"></li>
                     <li><%= link_to "Sign out", logout_path %></li>
                   </ul>
