become member working

--- a/app/views/events/_add_to_cart_form.html.erb
+++ b/app/views/events/_add_to_cart_form.html.erb
@@ -25,7 +25,7 @@
         </div>
     <% else %>
       <div class="stripe-controls" align="center">
-        <script src="https://button.stripe.com/v1/button.js" class="stripe-button"
+        <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
             data-key="<%= ENV['STRIPE_PUBLIC_KEY'] %>" data-amount="">
         </script>
       </div>
