--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.your_account_or_email %> <i class="icon-user"></i></b></a>
                   <ul class="dropdown-menu">
+                    <li><%= link_to "Save your Account", signup_path if current_user.guest? %></li>
                     <li><%= link_to "User Account", user_path(current_user) %></li>
                     <li> <%= link_to "Your Events", organizer_events_path %>  </li>
                     <li class="divider"></li>
