--- a/app/views/member_profiles/new.html.erb
+++ b/app/views/member_profiles/new.html.erb
@@ -1,2 +1,26 @@
-<h1>MemberProfiles#new</h1>
-<p>Find me in app/views/member_profiles/new.html.erb</p>
+<div class="container">
+  <h1>Save your Account</h1>
+
+  <%= form_for @member_profile do |f| %>
+    <% if @member_profile.errors.any? %>
+      <div class="error_messages">
+        <h2>Form is invalid</h2>
+        <ul>
+          <% @member_profile.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.text_field :email %>
+    </div>
+    <div class="field">
+      <%= f.label :password %><br />
+      <%= f.password_field :password %>
+    </div>
+    <div class="actions"><%= f.submit "Sign up" %></div>
+  <% end %>
+</div>
