--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
           <div class="span3">
             <dl>
               <dt>Email</dt>
-              <dd><%= @user.email %></dd>
+              <dd><%= @user.your_account_or_email %></dd>
               <dt>Username</dt>
               <dd><%#= @user.name || "none provided" %></dd>
             </dl>
