--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -1,53 +1,1 @@
-<div class="row">
-  <div class="span12">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-        </tr>
-      </thead>
-      <% if current_user %>
-        <tbody>
-          <% @events.each do |event| %>
-          <tr>
-            <td>
-              <a class="thumbnail" href="<%= event_path(event) %>">
-                <%= filepicker_image_tag event.image, width: 100, height: 100, fit: 'clip' if event.image? %>
-              </a>
-            </td>
-            <td>
-              <dt>Time Left</dt>
-              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
-              <dt>Time Left</dt>
-              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
-            </td>
-            <td>
-              <dt>Time Left</dt>
-              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
-              <dt>Time Left</dt>
-              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
-            </td>
-            <td>
-              <dt>Time Left</dt>
-              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
-              <dt>Time Left</dt>
-              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
-            </td>
-            <td >
-              <div class="btn-group pull-right">
-                <%= link_to raw('<i class="icon-list"></i>'), [:organizer, event], class: "btn" %>
-                <%= link_to raw('<i class="icon-eye-open"></i>'), event_path(event), class: "btn" %>
-                <%= link_to raw('<i class="icon-pencil"></i>'), edit_organizer_event_path(event), class: "btn" %>
-              </div>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      <% end %>
-    </table>
-  </div>
-</div>
-
+<div class="container"></div>
