fixed home menu dropdown

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,6 +5,7 @@
 
 		<%= f.input :artist %>
 		<%= f.input :venue %>
+		<%= f.input :new_location, hint: "#{request.location}" %>
 		<%= f.input :date %>
 		<%= f.input :doors %>
 		<%= f.input :ticket_price %>
