--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,20 @@
         <ul class="nav nav-pills pull-right">
           <li><%= link_to "Search Events", events_path %></li>
           <li><%= link_to "Help & Information", info_path %></li>
-          <li><%= current_user ? link_to(current_user.your_account_or_email, user_path(current_user)) : link_to("Sign In", login_path) %></li>
+          <% if current_user %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.your_account_or_email %> <i class="icon-user"></i></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Save your Account", signup_path if current_user.guest? %></li>
+                <li><%= link_to "User Account", user_path(current_user) %></li>
+                <li> <%= link_to "Your Events", organizer_event_path(current_user.events.first.id) %>  </li>
+                <li class="divider"></li>
+                <li><%= link_to "Sign out", logout_path %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "Sign in", login_path %></li>
+          <% end %>
         </ul>
         <h3 class="muted">100 Motels</h3>
       </div>
