back to behaviour now

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -18,7 +18,7 @@
 
 		<div class="form-actions">
 				<%= f.submit nil, class: "btn btn-primary" %>
-				<%= link_to_if @event, 'Cancel', @event, class: 'btn' %>
+				<%= link_to "Back", :back, class: 'btn' %>
 		</div>
 	</fieldset>
 
