--- a/app/views/organizer/events/_form.html.erb
+++ b/app/views/organizer/events/_form.html.erb
@@ -4,10 +4,10 @@
   <fieldset>
     <legend><%= controller.action_name.capitalize %> Event</legend>
 
-    <%= f.input :state, :label => "Visible to Public?", :collection => ["hidden","visible"] %>
+    <%= f.input :visible, :label => "Visible to Public?" %>
     <%= f.input :artist, label: "Artist / Event Name", placeholder: "Crete Boom" %>
     <%= f.input :venue, label: "Name of Venue", placeholder: "The Rickshaw" %>
-    <%= f.input :new_location, label: "Location of Venue", placeholder: "123 Back Street, Dublin, Ireland" %>
+    <%= f.input :new_location, label: "Location of Venue", hint: "#{request.location.address}" %>
     <%= f.input :venue_capacity, placeholder: "100" %>
     <%= f.input :date, label: "Date of Event" %>
     <%= f.input :doors, label: "Event start time" %>
@@ -21,7 +21,7 @@
 
     <div class="form-actions">
         <%= f.submit nil, class: "btn btn-primary" %>
-        <%= link_to 'Cancel', events_path, class: 'btn' %>
+        <%= link_to "Back", :back, class: 'btn' %>
     </div>
   </fieldset>
 
