added tickets pdf

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -100,6 +100,15 @@
   </div>
   <div class="modal-body">
     <p>Hi there  here's some basic instructions to get you going...</p>
+    <ul>
+    	<li>Order a ticket for your event</li>
+    	<li>Click on 'your account' and go to 'my events'</li>
+    	<li>Click on 'Connect to Stripe' and 'skip this form' this gives you a test account to play around with.</li>
+    	<li>Charge your order (in test mode your credit card will not be charged).</li>
+    	<li>Go to 'Check In View' and admit yourself to your event!</li>
+    	<li>You can also create another order and test out the refund/cancel options</li>
+    	<li>When your done don't forget to save your account. You will need to reconnect to Stripe to proccess real payments.</li>
+    </ul>
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true" >Got it!</button>
