--- a/app/views/organizer/tickets/index.html.erb
+++ b/app/views/organizer/tickets/index.html.erb
@@ -10,6 +10,7 @@
   </div>
   <div class="row">
     <div class="span12">
+      <%= link_to "PDF", organizer_event_tickets_path(@event, format: "pdf"), class: "btn" %>
       <%= link_to "Back", organizer_event_path(@event), class: "btn" %>
       <p class="lead"><%= @tickets.where('admitted is not null').count %> out of <%= @tickets.count %> Admitted </p>
       <%= form_tag organizer_event_tickets_path, method: :get, class: "" do %>
