--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,12 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.your_account_or_email %> <i class="icon-user"></i></b></a>
                   <ul class="dropdown-menu">
                     <li><%= link_to "Save your Account", signup_path if current_user.guest? %></li>
-                    <li><%= link_to "User Account", user_path(current_user) %></li>
-                    <li> <%= link_to "Your Events", organizer_event_path(current_user.events.first.id) %>  </li>
+                    <li><%= link_to "User Account", user_path(current_user) unless current_user.guest? %></li>
+                    <% if current_user.events.empty? %>
+                      <li><%= link_to "New Event", new_organizer_event_path %></li>
+                    <% else %>
+                      <li> <%= link_to "Your Events", organizer_event_path(current_user.events.first) %>  </li>
+                    <% end %>
                     <li class="divider"></li>
                     <li><%= link_to "Sign out", logout_path %></li>
                   </ul>
