--- a/app/views/organizer/tickets/index.html.erb
+++ b/app/views/organizer/tickets/index.html.erb
@@ -24,9 +24,9 @@
         <tbody>
          <% @tickets.each do |t| %>
           <tr>
-            <td><%= link_to "#{t.order.email} | #{t.quantity_counter}", order_path(t.order) %></td>
-            <td><%= t.admitted ? "Admitted #{t.admitted}" : "Not Admitted" %></td>
-            <td><%= link_to "Admit", organizer_event_ticket_path(@event, t), method: :put, class: "btn btn-warning", data: {confirm: t.number} unless t.admitted %></td>
+            <td><%= link_to "#{t.order.email}  \##{t.quantity_counter}", order_path(t.order) %></td>
+            <td><%= t.admitted ? "Admitted #{t.admitted}" : "#{t.number}" %></td>
+            <td><%= link_to "Admit", organizer_event_ticket_path(@event, t), method: :put, class: "btn btn-warning", data: {confirm: "Admit #{t.number}?"} unless t.admitted %></td>
           </tr>
           <% end %>
         </tbody>
